--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.1",
-    "sugar": "^2.0.4"
+    "sugar": "^2.0.4",
+    "prop-types": "^15.5.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -28,6 +29,7 @@
     "dotenv": "2.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
@@ -55,7 +57,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "lint:js": "eslint --ext .js src/**/*.js"
+    "lint:js": "eslint --ext .js src/**/*.js --fix"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -85,8 +87,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
