--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "lint:js": "eslint --ext .js src/**/*.js --fix"
+    "lint:js": "eslint --ext .js src/**/*.js"
   },
   "jest": {
     "collectCoverageFrom": [
