--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "node-sass": "^4.5.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
@@ -35,7 +36,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.10.0",
     "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
@@ -53,10 +53,16 @@
     "react-dev-utils": "^0.5.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "whatwg-fetch": "2.0.2",
+    "sass-loader": "^6.0.3",
+    "node-sass": "^4.5.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "webpack": "^2.4.1",
+    "webpack-bundle-analyzer": "^2.3.1",
+    "webpack-dashboard": "^0.3.0",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-validator": "^3.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
