--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "node-sass": "^4.5.2",
+    "npm-run-all": "^4.0.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "0.10.0",
     "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
@@ -46,27 +48,29 @@
     "lint-staged": "^3.4.1",
     "materialize-css": "^0.98.2",
     "milligram": "^1.3.0",
+    "node-sass": "^4.5.0",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "prettier": "^1.3.1",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "sass-loader": "^6.0.3",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2",
-    "sass-loader": "^6.0.3",
-    "node-sass": "^4.5.0",
-    "extract-text-webpack-plugin": "^2.1.0",
     "webpack": "^2.4.1",
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-server": "^2.4.1",
-    "webpack-validator": "^3.0.0"
+    "webpack-manifest-plugin": "1.1.0",
+    "webpack-validator": "^3.0.0",
+    "whatwg-fetch": "2.0.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build-css": "node-sass src/ -o src/",
+    "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
+    "start-js": "node scripts/start.js",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint:js": "eslint --ext .js src/**/*.js",
     "lint:js-fix": "eslint --fix --ext .js src/**/*.js",
