--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "babel-loader": "6.2.10",
     "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.20.0",
+    "bootstrap-sass": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
-    "css-loader": "0.26.1",
+    "css-loader": "^0.28.1",
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
     "eslint": "^3.19.0",
@@ -50,12 +51,12 @@
     "milligram": "^1.3.0",
     "node-sass": "^4.5.0",
     "object-assign": "4.1.1",
-    "postcss-loader": "1.2.2",
+    "postcss-loader": "^2.0.5",
     "prettier": "^1.3.1",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
     "sass-loader": "^6.0.3",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.17.0",
     "url-loader": "0.5.7",
     "webpack": "^2.4.1",
     "webpack-bundle-analyzer": "^2.3.1",
@@ -66,11 +67,8 @@
     "whatwg-fetch": "2.0.2"
   },
   "scripts": {
-    "build-css": "node-sass src/ -o src/",
-    "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
-    "start-js": "node scripts/start.js",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && node scripts/build.js",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint:js": "eslint --ext .js src/**/*.js",
     "lint:js-fix": "eslint --fix --ext .js src/**/*.js",
