--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ROCKETDASHBOARD",
+  "name": "RocketDashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,6 @@
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^18.0.0",
     "babel-loader": "6.2.10",
     "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.20.0",
@@ -41,11 +40,9 @@
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
     "husky": "^0.13.3",
-    "jest": "18.1.0",
+    "jest": "^20.0.1",
     "json-loader": "0.5.4",
     "lint-staged": "^3.4.1",
-    "materialize-css": "^0.98.2",
-    "milligram": "^1.3.0",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "prettier": "^1.3.1",
