--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^20.0.1",
     "json-loader": "0.5.4",
     "lint-staged": "^3.4.1",
+    "node-sass": "^4.5.2",
     "object-assign": "4.1.1",
     "postcss-loader": "^2.0.5",
     "prettier": "^1.3.1",
