--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "recharts": "^0.22.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "sugar": "^2.0.4",
