--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": [
+    "src/**/*.js": [
       "prettier --single-quote --trailing-comma all --write",
       "git add"
     ]
