--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "cross-env": "^1.0.8",
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
@@ -22,6 +23,7 @@
     "babel-loader": "6.2.10",
     "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.20.0",
+    "babel-register": "^6.9.0",
     "bootstrap-sass": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -63,12 +65,14 @@
     "whatwg-fetch": "2.0.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "___start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint:js": "eslint --ext .js src/**/*.js",
     "lint:js-fix": "eslint --fix --ext .js src/**/*.js",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "build-server": "cross-env NODE_ENV=production webpack --config config/webpack.config.server-dev.js",
+    "start-server": "node scripts/start-server.js"
   },
   "lint-staged": {
     "src/**/*.js": [
