--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "server-start": "node scripts/server-start.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "chalk": "^1.1.3",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "express": "^4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
