--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-server": "^2.4.1",
     "webpack-manifest-plugin": "1.1.0",
-    "webpack-validator": "^3.0.0",
-    "whatwg-fetch": "2.0.2"
+    "webpack-validator": "^3.0.0"
   },
   "scripts": {
     "start": "concurrently \"node scripts/client-start.js\" \"node server/scripts/server-start.js\"",
