--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "concurrently": "^3.4.0",
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -31,6 +32,7 @@
     "css-loader": "^0.28.1",
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.1",
@@ -52,6 +54,7 @@
     "prettier": "^1.3.1",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "react-test-renderer": "^15.5.4",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "url-loader": "0.5.7",
