--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "chalk": "^1.1.3",
     "cookie-parser": "~1.4.3",
     "express": "^4.15.2",
+    "googleapis": "^19.0.0",
     "jade": "~1.11.0",
     "moment": "^2.18.1",
     "morgan": "~1.8.1"
