--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.4.3",
     "express": "^4.15.2",
     "jade": "~1.11.0",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1"
   },
   "devDependencies": {
