--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "lint:js-fix": "eslint --fix --ext .js src/**/*.js"
   },
   "dependencies": {
+    "ajv": "^5.1.5",
     "body-parser": "~1.17.1",
     "chalk": "^1.1.3",
     "cookie-parser": "~1.4.3",
