--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start:dev": "nodemon -w src --exec \"npm run lint:js && babel-node src --presets env\"",
-    "start:build": "node build",
+    "start:dev": "nodemon -w src --exec \"export NODE_ENV=dev && npm run lint:js && babel-node src --presets env\"",
+    "start:build": "export NODE_ENV=prod && node build",
     "build": "babel src -d build",
     "lint:js": "eslint --ext .js src/**/*.js",
     "lint:js-fix": "eslint --fix --ext .js src/**/*.js"
   },
   "dependencies": {
+    "ajv": "^5.1.5",
     "body-parser": "~1.17.1",
     "chalk": "^1.1.3",
     "cookie-parser": "~1.4.3",
     "express": "^4.15.2",
+    "googleapis": "^19.0.0",
     "jade": "~1.11.0",
+    "lodash": "^4.17.4",
     "morgan": "~1.8.1"
   },
   "devDependencies": {
