--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "googleapis": "^19.0.0",
     "jade": "~1.11.0",
     "lodash": "^4.17.4",
-    "morgan": "~1.8.1"
+    "morgan": "~1.8.1",
+    "node-insights": "^1.0.15"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
