--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ajv": "^5.1.5",
+    "apicache": "^0.8.6",
     "body-parser": "~1.17.1",
     "chalk": "^1.1.3",
     "cookie-parser": "~1.4.3",
