--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "client": "node scripts/client-start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "test:coverage": "yarn test -- --coverage",
     "lint:js": "eslint --ext .js src/**/*.js",
     "lint:js-fix": "eslint --fix --ext .js src/**/*.js",
     "precommit": "lint-staged"
