--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start:dev": "nodemon -w src --exec \"export NODE_ENV=dev && npm run lint:js && babel-node src --presets env\"",
-    "start:build": "export NODE_ENV=prod && node build",
+    "start:dev": "nodemon -w src --exec \"export NODE_ENV=development && npm run lint:js && babel-node src --presets env\"",
+    "start:build": "export NODE_ENV=production && node build",
     "build": "babel src -d build",
     "lint:js": "eslint --ext .js src/**/*.js",
     "lint:js-fix": "eslint --fix --ext .js src/**/*.js"
@@ -15,6 +15,7 @@
     "body-parser": "~1.17.1",
     "chalk": "^1.1.3",
     "cookie-parser": "~1.4.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "googleapis": "^19.0.0",
     "jade": "~1.11.0",
