--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-addons-test-utils": "^15.5.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-interval": "^2.0.1",
     "react-redux": "^5.0.4",
     "recharts": "^0.22.4",
     "redux": "^3.6.0",
