--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jade": "~1.11.0",
     "lodash": "^4.17.4",
     "morgan": "~1.8.1",
+    "node-cache": "^4.1.1",
     "node-insights": "^1.0.15"
   },
   "devDependencies": {
