--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.2",
     "googleapis": "^19.0.0",
     "jade": "~1.11.0",
+    "jira-client": "^6.4.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
