--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
+    "node-cache": "^4.1.1",
     "node-insights": "^1.0.15"
   },
   "devDependencies": {
