Fixed linting of index.js; Fixed errors in index.js

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
     "start:dev": "nodemon -w src --exec \"export NODE_ENV=development && npm run lint:js && babel-node src --presets env\"",
     "start:build": "export NODE_ENV=production && node build",
     "build": "babel src -d build",
-    "lint:js": "eslint --ext .js src/**/*.js",
-    "lint:js-fix": "eslint --fix --ext .js src/**/*.js"
+    "lint:js": "eslint --ext .js src",
+    "lint:js-fix": "eslint --fix --ext .js src"
   },
   "dependencies": {
     "ajv": "^5.1.5",
