jira integration is done; credentials are in the dot-env file

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -1,9 +1,14 @@
 # BugsHistory: To access a Google Sheets a service account is needed.
 BUGS_HISTORY_SPREADSHEET_ID=""
-BUGS_HISTORY_SERVICE_ACCOUNT_EMAIL=""
-BUGS_HISTORY_SERVICE_ACCOUNT_PRIVATE_KEY=""
+GOOGLE_SERVICE_ACCOUNT_EMAIL=""
+GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=""
 
 # New Relic Insights API requires so called "query key"
 # insights.newrelic.com  > Manage Data > API Keys > Query Keys
 NEWRELIC_ACCOUNT_ID=""
 NEWRELIC_QUERY_KEY=""
+
+# JIRA
+JIRA_HOST = ""
+JIRA_USERNAME = ""
+JIRA_PASSWORD = ""
