data range is added to configs

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -1,5 +1,7 @@
 # BugsHistory: To access a Google Sheets a service account is needed.
 BUGS_HISTORY_SPREADSHEET_ID=""
+BUGS_HISTORY_DATA_RANGE=""
+
 GOOGLE_SERVICE_ACCOUNT_EMAIL=""
 GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=""
 
