--- a/package.json
+++ b/package.json
@@ -88,7 +88,9 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
-      "!src/index.js"
+      "!src/index.js",
+      "!src/actions/index.js",
+      "!src/reducers/index.js"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
