--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -1,4 +1,5 @@
 # BugsHistory: To access a Google Sheets a service account is needed.
+# https://github.com/rocket-internet-berlin/RocketDashboard/blob/master/README.md#google-spreadsheets-the-bugs-history-widget
 BUGS_HISTORY_SPREADSHEET_ID=""
 BUGS_HISTORY_DATA_RANGE=""
 
@@ -10,7 +11,7 @@ GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=""
 NEWRELIC_ACCOUNT_ID=""
 NEWRELIC_QUERY_KEY=""
 
-# JIRA
+# JIRA basic authentication credentials, hostname is e.g. "jira.rocket-internet.de"
 JIRA_HOST = ""
 JIRA_USERNAME = ""
 JIRA_PASSWORD = ""
