Tweak .env.SAMPLE explanation

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -11,7 +11,7 @@ GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=""
 NEWRELIC_ACCOUNT_ID=""
 NEWRELIC_QUERY_KEY=""
 
-# JIRA basic authentication credentials, hostname is e.g. "jira.rocket-internet.de"
+# JIRA credentials of a user with access to the project
 JIRA_HOST = ""
 JIRA_USERNAME = ""
 JIRA_PASSWORD = ""
