--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "webpack-validator": "^3.0.0"
   },
   "scripts": {
-    "start": "concurrently \"npm run client\" \"npm run --prefix server start:dev\"",
-    "client": "node scripts/client-start.js",
+    "start": "concurrently \"npm run start:dev\" \"npm run --prefix server start:dev\"",
+    "start:dev": "node scripts/client-start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "test:coverage": "yarn test -- --coverage",
