--- a/package.json
+++ b/package.json
@@ -73,7 +73,10 @@
   "scripts": {
     "start": "concurrently \"npm run start:dev\" \"npm run --prefix server start:dev\"",
     "start:dev": "node scripts/client-start.js",
+    "start:production": "serve -s -p 3000 build",
     "build": "node scripts/build.js",
+    "cs:build": "npm run build && npm run --prefix server build",
+    "cs:start": "concurrently \"npm run start:production\" \"npm run --prefix server start:production\"",
     "test": "node scripts/test.js --env=jsdom",
     "test:coverage": "yarn test -- --coverage",
     "lint:js": "eslint --ext .js src/**/*.js",
@@ -120,5 +123,5 @@
       "react-app"
     ]
   },
-  "proxy": "http://localhost:3002"
+  "proxy": "http://localhost:3001"
 }
