Ensure working build (#53)
* fix error reporting; tweak script naming;

* fix client build instructions; change ports client=> 3001; server => 3002;

* Update Rocket logo

* Working "cs:build" and "cs:start" script to build both client and server, and serve them from ports 3000 and 3001

--- a/package.json
+++ b/package.json
@@ -72,9 +72,12 @@
     "webpack-validator": "^3.0.0"
   },
   "scripts": {
-    "start": "concurrently \"npm run client\" \"npm run --prefix server start:dev\"",
-    "client": "node scripts/client-start.js",
+    "start": "concurrently \"npm run start:dev\" \"npm run --prefix server start:dev\"",
+    "start:dev": "node scripts/client-start.js",
+    "start:production": "serve -s -p 3000 build",
     "build": "node scripts/build.js",
+    "cs:build": "npm run build && npm run --prefix server build",
+    "cs:start": "concurrently \"npm run start:production\" \"npm run --prefix server start:production\"",
     "test": "node scripts/test.js --env=jsdom",
     "test:coverage": "yarn test -- --coverage",
     "lint:js": "eslint --ext .js src/**/*.js",
