--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ajv": "^5.1.5",
     "apicache": "^0.8.6",
+    "axios": "^0.16.2",
     "body-parser": "~1.17.1",
     "chalk": "^1.1.3",
     "cookie-parser": "~1.4.3",
