--- a/server/package.json
+++ b/server/package.json
@@ -23,13 +23,16 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "fs": "0.0.1-security",
     "googleapis": "^19.0.0",
     "jade": "~1.11.0",
     "jira-client": "^6.4.0",
     "lodash": "^4.17.4",
     "morgan": "~1.8.1",
     "node-cache": "^4.1.1",
-    "node-insights": "^1.0.15"
+    "node-insights": "^1.0.15",
+    "path": "^0.12.7",
+    "rotating-file-stream": "^1.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
