Stock price widget

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -15,3 +15,7 @@ NEWRELIC_QUERY_KEY=""
 JIRA_HOST = ""
 JIRA_USERNAME = ""
 JIRA_PASSWORD = ""
+
+# Key for fetching stock information, e.g. FRA:RKET for Rocket Internet or ETR:DHER for Delivery Hero.
+STOCK_TICKER = ""
+COMPANY_NAME = ""
