--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^2.0.3",
     "redux-thunk": "^2.2.0",
+    "serve": "^6.0.6",
     "sugar": "^2.0.4",
     "whatwg-fetch": "^2.0.2"
   },
