--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.5.4",
     "react-interval": "^2.0.1",
     "react-redux": "^5.0.4",
+    "react-relative-time": "0.0.7",
     "recharts": "^0.22.4",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.3",
