weather widget prototype

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -19,3 +19,7 @@ JIRA_PASSWORD = ""
 # Key for fetching stock information, e.g. FRA:RKET for Rocket Internet or ETR:DHER for Delivery Hero.
 STOCK_TICKER = ""
 COMPANY_NAME = ""
+
+# Key for Open Weather API
+WEATHER_API_KEY: ""
+WEATHER_API_CITY_ID: ""
