--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "babel-runtime": "^6.20.0",
     "bootstrap-sass": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
+    "chalk": "^2.1.0",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "^2.13.1",
     "cross-spawn": "4.0.2",
