Added LocalStorage to store user specific widget settings.
Handled new widget in local storage.

--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
       "!src/actions/index.js"
     ],
     "setupFiles": [
-      "<rootDir>/config/polyfills.js"
+      "<rootDir>/config/polyfills.js",
+      "<rootDir>/scripts/local-storage-mock.js"
     ],
     "testPathIgnorePatterns": [
       "<rootDir>[/\\\\](build|docs|node_modules|scripts)[/\\\\]"
