--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-bootstrap": "^0.31.0",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.5.4",
     "react-interval": "^2.0.1",
     "react-redux": "^5.0.4",
@@ -21,6 +23,7 @@
     "redux-thunk": "^2.2.0",
     "serve": "^6.0.6",
     "sugar": "^2.0.4",
+    "uuid": "^3.1.0",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
