Added isotope dependency

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "concurrently": "^3.4.0",
+    "isotope-layout": "^3.0.4",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "prop-types": "^15.5.9",
