Added icon to weather widget

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -21,5 +21,5 @@ STOCK_TICKER = ""
 COMPANY_NAME = ""
 
 # Key for Open Weather API
-WEATHER_API_KEY: ""
-WEATHER_API_CITY_ID: ""
+WEATHER_API_KEY = ""
+WEATHER_API_CITY_ID = ""
