--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.5.4",
     "react-interval": "^2.0.1",
+    "react-modal": "^2.2.4",
     "react-redux": "^5.0.4",
     "react-relative-time": "0.0.7",
     "recharts": "^0.22.4",
