Git widget prototype

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -31,3 +31,8 @@ WEATHER_API_CITY_ID = ""
 # e.g, for hashtag
 # TWITTER_QUERY = "hashtag/rocketinternet"
 TWITTER_QUERY = ""
+
+# Github
+GITHUB_USER = ""
+GITHUB_PROJECT = ""
+GITHUB_AUTH_TOKEN = ""
