--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^2.2.4",
     "react-redux": "^5.0.4",
     "react-relative-time": "0.0.7",
+    "react-slick": "^0.15.0",
     "recharts": "^0.22.4",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.3",
