--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: node_js
+install: yarn && cd server && yarn && cd ..
 cache:
   yarn: true
   directories:
     - "node_modules"
+    - "server/node_modules"
 node_js:
   - "7"
 notifications:
   email: false
-script: yarn test:coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+script:
+  - yarn test:coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - cd server && yarn test:coverage
