--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
     "start:production": "export NODE_ENV=production && node build",
     "build": "babel src -d build",
     "lint:js": "eslint --ext .js src",
-    "lint:js-fix": "eslint --fix --ext .js src"
+    "lint:js-fix": "eslint --fix --ext .js src",
+    "test": "jest tests/*",
+    "test:coverage": "yarn test -- --coverage",
+    "test:watch": "yarn test -- --watchAll"
   },
   "dependencies": {
     "ajv": "^5.1.5",
@@ -30,7 +33,8 @@
     "rotating-file-stream": "^1.2.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "axios-mock-adapter": "^1.9.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-preset-env": "^1.5.1",
     "eslint": "^3.19.0",
@@ -38,7 +42,15 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.1",
+    "jest": "^20.0.4",
     "nodemon": "^1.11.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js",
+      "!src/config/*"
+    ]
   },
   "babel": {
     "presets": [
