Re-factored history widget and added StatusCake history widget.
Added unit test for status cake service.

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -24,6 +24,13 @@ COMPANY_NAME = ""
 WEATHER_API_KEY = ""
 WEATHER_API_CITY_ID = ""
 
+# Config for StatusCake
+STATUSCAKE_API_KEY = ""
+STATUSCAKE_USERNAME = ""
+STATUSCAKE_TEST_ID = ""
+STATUSCAKE_HISTORY_PERIOD = "PT24H"
+STATUSCAKE_HISTORY_INTERVAL = "PT3M"
+
 # Twitter service config
 # Use twitter handle or hashtag as query
 # e.g, for handle
