Added twitter feed widget.

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -23,3 +23,11 @@ COMPANY_NAME = ""
 # Key for Open Weather API
 WEATHER_API_KEY = ""
 WEATHER_API_CITY_ID = ""
+
+# Twitter service config
+# Use twitter handle or hashtag as query
+# e.g, for handle
+# TWITTER_QUERY = "RocketBerlin"
+# e.g, for hashtag
+# TWITTER_QUERY = "hashtag/rocketinternet"
+TWITTER_QUERY = ""
