--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.16.2",
     "body-parser": "~1.17.1",
     "chalk": "^2.1.0",
+    "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
