Added instagram widget component

--- a/server/.env.SAMPLE
+++ b/server/.env.SAMPLE
@@ -43,3 +43,8 @@ TWITTER_QUERY = ""
 GITHUB_USER = ""
 GITHUB_PROJECT = ""
 GITHUB_AUTH_TOKEN = ""
+
+# Instagram
+INSTAGRAM_KEY = ""
+INSTAGRAM_VALUE = ""
+INSTAGRAM_TOKEN = ""
