--- a/server/package.json
+++ b/server/package.json
@@ -43,7 +43,8 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.1",
     "jest": "^20.0.4",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sinon": "^3.2.1"
   },
   "jest": {
     "collectCoverageFrom": [
