--- a/server/package.json
+++ b/server/package.json
@@ -44,7 +44,8 @@
     "eslint-plugin-react": "^7.2.1",
     "jest": "^20.0.4",
     "nodemon": "^1.11.0",
-    "sinon": "^3.2.1"
+    "sinon": "^3.2.1",
+    "sinon-stub-promise": "^4.0.0"
   },
   "jest": {
     "collectCoverageFrom": [
